vueapp/src/assets/styles/custom.css
.court-card .queue .courts {
  min-width: 200px;
}

.court-card {
  min-height: 200px;
}

.queue-card {
  min-height: 200px;
  width: 95%;
}

.queue {
  width: 20%;
}
.courts {
  width: 60%;
}

.queue-top {
  height: 88%;
}

.queue-bottom {
  height: 15%;
  overflow: auto;
  text-align: center;
  justify-content: space-evenly;
}

.ghost {
  opacity: 0.5;
  background: #c8ebfb;
}

